--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -27,55 +27,71 @@ form
   width: 100%
   height: 100%
   
-  .title
-    position: absolute
-    top: 25%
-    left: 18%
-    font-size: 13rem
-    font-color: black
-    width: 50%
-    line-height: 10rem
-    color: white
+  // title use homepage.sass settings
+
   .input-container
     position: absolute
-    top: 48%
+    top: 46%
     left: 10%
-    font-size: 3rem
-    font-color: black
+    font-size: 1.3rem
     right: 10%
     color: black
     background-color: var(--bg-cam-btn)
-    border-radius: 2rem
-    padding: 3rem 3rem 5rem
-  input
-    position: relative
-    left:2rem
-    width: 90%
-    height:5rem
-    font-size: 3rem
+    border-radius: 1.5rem
+    padding: 1rem
+
+    input
+      position: relative
+      left: 2rem
+      max-width: 83%
+      height: 1.9rem
+      font-size: 1.1rem
+      padding: 0 0.5rem
+      border-radius: 0.5rem
+
+    .signalert
+      font-size: 0.9rem
+      font-weight: 700
+      color: red
+      text-align: right
+      padding: 0.5rem 1rem 0 0
+
+
+  
+
+  button:nth-child(2)
+    position: absolute
+    bottom: 10%
+    right: 30%
+    padding-bottom: 0.5rem
+    font-size: 1rem
+    font-weight: 500
+    color: #C4E1FF
+    background-color: transparent
+    padding: 0.2rem 0.3em
+    border-radius: 0.6em
+    border: none
+
+  button:nth-child(3)
+    position: absolute
+    bottom: 10%
+    right: 10%
+    font-size: 1.5rem
+    background-color: #d5dce6
+    font-weight: 700
+    padding: 0.5rem 0.6rem
     border-radius: 1rem
 
-.reg 
-  position: absolute
-  bottom:10%
-  right:30%
-  font-size: 3.5rem
-  background-color: #d5dce6
-  padding: 1rem
-  border-radius: 2rem
-.log 
-  position: absolute
-  bottom:10%
-  right:10%
-  font-size: 4rem
-  background-color: #d5dce6
-  padding: 1rem
-  border-radius: 2rem
-.create
-  position: absolute
-  bottom:5%
-  right:10%
-  font-size: 4rem
-  background-color: #d5dce6
-  padding: 1rem
-  border-radius: 2rem
+  button:nth-child(4)
+    position: absolute
+    bottom: 13%
+    right: 30%
+    padding-bottom: 0.5rem
+    font-size: 1rem
+    font-weight: 500
+    color: #C4E1FF
+    background-color: transparent
+    padding: 0.2rem 0.3em
+    border-radius: 0.6em
+    border: none
+  
