--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -53,6 +53,7 @@ html
       .title(align='center') 我的最愛
       
       #favorite_list.list
+        <!-- {favorite0} -->
         <!-- {favorite1} -->
         <!-- {favorite2} -->
         <!-- {favorite3} -->
@@ -71,6 +72,7 @@ html
       img#favorite-sw.list-sw(src='../../static/file/favorite.png')
       .title(align='center') 歷史紀錄
       #history_list.list
+        <!-- {shopname0} -->
         <!-- {shopname1} -->
         <!-- {shopname2} -->
         <!-- {shopname3} -->
