modify list btn UI

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -62,7 +62,7 @@
     border-radius: 2rem
     background-color: #DAE1F2
     margin-bottom: 1rem
-    padding: 1rem 0.5rem
+    padding: 1rem 0.5rem 0.5rem 0.5rem
     .shop-name
       font-size: 1.5rem
       font-weight: 900
@@ -95,7 +95,7 @@
       margin-left: 1rem
 
     .control_btn
-      height: 5rem
+      height: 2rem
       display: flex
       flex-direction: row
       flex-wrap: nowrap
@@ -105,10 +105,11 @@
       .small-block, .save-btn
         background-color: #94aeeb
         font-size: 1rem
-        border-radius: 1rem
+        border-radius: 0.5rem
         text-align: center
         display: inline
-        padding: 0.5rem
+        padding: 0.2rem 0.3rem
+        border: none
 
 #status-container
   position: fixed
