--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -66,6 +66,34 @@ html
         <!-- {favorite10} -->
         <!-- {favorite11} -->
         <!-- {favorite12} -->  
+        <!-- {favorite13} -->
+        <!-- {favorite14} -->
+        <!-- {favorite15} -->
+        <!-- {favorite16} -->
+        <!-- {favorite17} -->
+        <!-- {favorite18} -->
+        <!-- {favorite19} -->
+        <!-- {favorite20} -->
+        <!-- {favorite21} -->
+        <!-- {favorite22} -->
+        <!-- {favorite23} -->
+        <!-- {favorite24} -->
+        <!-- {favorite25} -->
+        <!-- {favorite26} -->
+        <!-- {favorite27} -->
+        <!-- {favorite28} -->
+        <!-- {favorite29} -->
+        <!-- {favorite30} -->
+        <!-- {favorite31} -->
+        <!-- {favorite32} -->
+        <!-- {favorite33} -->
+        <!-- {favorite34} -->
+        <!-- {favorite35} -->
+        <!-- {favorite36} -->
+        <!-- {favorite37} -->
+        <!-- {favorite38} -->
+        <!-- {favorite39} -->
+        <!-- {favorite40} -->
 
     #history-container.container
       img#history-exit.exit-btn(src='../../static/file/cross-icon.png')
