--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -27,11 +27,18 @@ form
   width: 100%
   height: 100%
   
-  // title use homepage.sass settings
+  #title
+    position: fixed
+    top: 10%
+    left: 18%
+    font-size: 4rem
+    width: 50%
+    line-height: 4rem
+    color: white
 
   .input-container
-    position: absolute
-    top: 46%
+    position: fixed
+    top: 35%
     left: 10%
     font-size: 1.3rem
     right: 10%
@@ -60,8 +67,8 @@ form
   
 
   button:nth-child(2)
-    position: absolute
-    bottom: 10%
+    position: fixed
+    bottom: 5%
     right: 30%
     padding-bottom: 0.5rem
     font-size: 1rem
@@ -73,8 +80,8 @@ form
     border: none
 
   button:nth-child(3)
-    position: absolute
-    bottom: 10%
+    position: fixed
+    bottom: 5%
     right: 10%
     font-size: 1.5rem
     background-color: #d5dce6
@@ -83,8 +90,8 @@ form
     border-radius: 1rem
 
   button:nth-child(4)
-    position: absolute
-    bottom: 13%
+    position: fixed
+    bottom: 8%
     right: 30%
     padding-bottom: 0.5rem
     font-size: 1rem
